@@ -17,7 +17,7 @@
 # domains. A different way to restrict ptrace is to set the selinux
 # deny_ptrace boolean. Both mechanisms will break some programs relying
 # on the ptrace system call and might force users to elevate their
-# priviliges to root to do their work.
+# privileges to root to do their work.
 #
 # For more information see Documentation/security/Yama.txt in the kernel
 # sources. Which also describes the defaults when CONFIG_SECURITY_YAMA
