@@ -1,3 +1,9 @@
+2020-12-12  Dmitry V. Levin  <ldv@altlinux.org>
+
+	* 10-default-yama-scope.conf: Fix spelling typo in comment.
+	* upload-release.sh: Likewise.
+	* elfutils.spec.in: Fix spelling typos in %changelog.
+
 2020-11-04  Dmitry V. Levin  <ldv@altlinux.org>
 
 	* profile.sh.in, profile.csh.in: Do not define $DEBUGINFOD_URLS unless
